# docs/swagger.yaml
@@ -41,6 +41,38 @@ info:
   version: "1.0"
 paths:
   /users/{spotifyID}:
+    delete:
+      consumes:
+      - application/json
+      description: Deletes a user account by spotify ID
+      parameters:
+      - description: Spotify ID of the user to delete
+        in: path
+        name: spotifyID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - Bearer: []
+      summary: Deletes a user account by spotify ID
+      tags:
+      - Users
     get:
       consumes:
       - application/json
@@ -73,6 +105,41 @@ paths:
       security:
       - Bearer: []
       summary: Gets a tunes user by their spotify ID
+      tags:
+      - Users
+      x-order: 1
+    patch:
+      consumes:
+      - application/json
+      description: Updates a user by their spotify ID. Only accessable to admins
+      parameters:
+      - description: Spotify ID of the user to update
+        in: path
+        name: spotifyID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.User'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - Bearer: []
+      summary: Updates a user by their spotify ID. Only accessable to admins
       tags:
       - Users
   /users/{spotifyID}/followers/:
@@ -116,6 +183,32 @@ paths:
       tags:
       - Users
   /users/current:
+    delete:
+      consumes:
+      - application/json
+      description: Deletes the current user
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - Bearer: []
+      summary: Deletes the current user
+      tags:
+      - Users
     get:
       consumes:
       - application/json
@@ -142,6 +235,34 @@ paths:
       security:
       - Bearer: []
       summary: Retreives the current user
+      tags:
+      - Users
+    patch:
+      consumes:
+      - application/json
+      description: Updates the current user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.User'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - Bearer: []
+      summary: Updates the current user
       tags:
       - Users
   /users/current/follow/{otherUserSpotifyID}:
@@ -249,6 +370,7 @@ paths:
       summary: Unfollowers a user for the currently signed in user
       tags:
       - Users
+      x-order: 2
 securityDefinitions:
   Bearer:
     description: '"Authorization header value"'
